<resources>
    <string name="app_name">MySensors</string>
    <string name="step_flush">Flush</string>
    <string name="sensor_list">SensorList</string>
    <string name="open_camera">OpenCamera</string>
    <string name="hello_lewis">Hello lewis!</string>
    <string name="hello_world">Hello World!</string>
    <string name="image">Image</string>
    <string name="video">Vedio</string>
</resources>
