<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sensor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.lewis.mysensors.SensorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/step_flush"
                android:textAllCaps="false"
                android:onClick="sensorFlush"
                android:textSize="12sp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/image"
                android:textAllCaps="false"
                android:onClick="openCamera"
                android:textSize="12sp"/>

            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:onClick="sensorList"
                android:text="@string/sensor_list"
                android:textAllCaps="false"
                android:textSize="12sp" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="openVideo"
                android:text="@string/video"
                android:textAllCaps="false"
                android:textSize="12sp" />


        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_world" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_lewis" />
        <TextView
            android:id="@+id/step_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/step_detector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ListView
            android:id="@+id/listview"
            android:layout_width="wrap_content"
            android:layout_height="320px"
            android:fadeScrollbars="true"
            android:fastScrollAlwaysVisible="true"
            android:fastScrollEnabled="true"
            android:stackFromBottom="true"
            android:transcriptMode="alwaysScroll">
        </ListView>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="90dp"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout"
        app:srcCompat="@android:drawable/btn_default" />

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:visibility="invisible" />

    <!--    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/step_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>-->
</RelativeLayout>
